Fix flags icons paths

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'>
 <title>Elstat</title>
 <meta name="csrf-param" content="authenticity_token" />
-<meta name="csrf-token" content="8K1SKu0E+3e6IRryegrTprRUNAWDvrR2DZ2uEEu9jQgWRXgJ8dblx0n4dzJlzwJlEVTNPOiHcKtShObDBaysCw==" />
-<link rel="stylesheet" media="all" href="assets/application-8aad2e20ce94e9bb6f3da01c8c568f5005b2692263da70b22cea663b20fc9495.css" />
+<meta name="csrf-token" content="EHBiAPgvxipWosFtHgH4ki0OE6fou4stiHj8fLWdO5IbrE8hajVSP/ysJ78ytoUFo0lrBbYqvWGf3zBBKOu9Qg==" />
+<link rel="stylesheet" media="all" href="assets/application-8fe70698efab544a717b9da6a06275a0a3ac025bc718a153f38e78b127879eaa.css" />
 <script src="assets/application-9e4c2856e6d9b77ee28e609b57d336dd03b00f802e4c2f2ecca542cb3e5613c0.js"></script>
-<script src="packs/application-c0c7c0cc7acfeebaa4b5.js"></script>
+<script src="packs/application.js"></script>
 
 </head>
 <body>
